--- a/frontend/src/styles/Menu.css
+++ b/frontend/src/styles/Menu.css
@@ -28,14 +28,52 @@
 
 .donuts-Card{
     margin: 10px;
+    border-width: .5px;
+    border-color: #838383;
+    box-shadow: 0 10px 2px 0 rgba(255, 255, 255, 0.5), 0 2px 0px 0 rgba(12, 11, 11, 0.5);
 }
 
 .donuts-Text{
-    font-size: 15px;
+    font-size: 17px;
     font-weight: bold;
+    padding: 10px;
+}
+
+.donuts-Description{
+    color: #838383;
+    font-weight: lighter;
+    font-size: 12px;
+    padding-bottom: 10px;
 }
 
 .donuts-Img{
     width: auto;
     margin: auto;
+}
+
+.donuts-Button{
+    border-radius: 50%;
+    border-width: 1px;
+    height: 30px;
+    width: 30px;
+    color: black;
+    font-size: 20px;
+    font-weight: lighter;
+    text-align: center;
+    margin: auto;
+}
+
+.donut-Add-Minus{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    text-align: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.donuts-Quantity{
+    color: #838383;
+    font-weight: lighter;
+    font-size: 12px;
+    padding-bottom: 10px;
 }
