--- a/frontend/src/styles/Confirmation.css
+++ b/frontend/src/styles/Confirmation.css
@@ -66,7 +66,9 @@
     width: 75%;
     font-weight: bold;
     color: white;
+    /* text-align: center middle; */
     margin: auto;
+    padding: 0px;
 }
 
 .agreement-button-div{
