--- a/frontend/src/styles/MenuEdit.css
+++ b/frontend/src/styles/MenuEdit.css
@@ -13,22 +13,18 @@
 }
 
 .donutEdit-Row{
-    margin: 10px;
+    padding: 0px;
+    margin: 0px;
     border-width: 0.5px;
     border-color: #838383;
     align-items: left;
 }
 
-td {
-    position: relative;
-}
-
 .donutEdit-Text{
     text-align: left;
     width: 100%;
-    height: 100%;
+    height: 95px;
     padding: 0px 10px;
-    position: absolute;
     margin: 0px;
     top: 0;
     left: 0;
@@ -39,7 +35,7 @@ td {
 .donutEdit-Button{
     width: 90%;
     margin: auto;
-    margin-left: 10px;
+    margin: 10px 0px;
     background-color: #EF72AC;
     border-radius: 10px;
     height: 50px;
