--- a/frontend/src/styles/MenuEdit.css
+++ b/frontend/src/styles/MenuEdit.css
@@ -26,6 +26,7 @@
     height: 95px;
     padding: 0px 10px;
     margin: 0px;
+    resize: none;
     top: 0;
     left: 0;
     right: 0;
@@ -33,13 +34,20 @@
 }
 
 .donutEdit-Button{
-    width: 90%;
+    width: 100%;
     margin: auto;
-    margin: 10px 0px;
     background-color: #EF72AC;
     border-radius: 10px;
     height: 50px;
     color: white;
     font-size: 15px;
     font-weight: bold;
+}
+
+.donutEdit-LongTd{
+    width: 25%;
+}
+
+.donutEdit-SmallTd{
+    width: 10%;
 }
